styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html,
body {
	padding: 0;
	margin: 0;
	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
}


body {
	overflow-x: hidden;
	overflow-y: scroll;
}

* {
	box-sizing: border-box;
}

@font-face {
	font-family: 'LemonMilk';
	src: url("/assets/fonts/LEMONMILK-Bold.otf");
	font-style: normal;
	font-weight: 400;
	font-display: swap;
}

#work-listra {
	width: 316px;
	height: 650px;

	background-image: url('/assets/images/projects/listra/listra-sprite.png');
	background-repeat: no-repeat;
	background-position: 0px 0px;
}

.footer-section,
.work-section,
.about-section,
.header-section,
.contact-section {
	overflow: hidden;
	max-height: 100%;
}

